--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     
     <groupId>com.danhaywood.mavenmixin</groupId>
     <artifactId>isisjrebel</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <packaging>pom</packaging>
     
